--- a/client/src/languages/en/English.json
+++ b/client/src/languages/en/English.json
@@ -11,11 +11,11 @@
   "About": "About",
   "Booking": "Booking",
   "About Us": "About Us",
-  "name": "Raouf Zahidi",
+  "name": "Raouf Zadi",
 
   "about_description": "With over 7 years of experience in barbering and education, we are your ideal choice.",
-  "about": "Raouf Zahidi",
-  "about_description_full": "Raouf Zahidi is a professional barber and instructor with over 7 years of experience, having trained more than 12 individuals in the Mila region, specifically in the town of Tsadan Hadada. Raouf dedicates his passion for the art of barbering to provide the best services to his clients and to train his students in the latest techniques and methods.",
+  "about": "Raouf Zadi",
+  "about_description_full": "Raouf Zadi is a professional barber and instructor with over 7 years of experience, having trained more than 12 individuals in the Mila region, specifically in the town of Tsadan Hadada. Raouf dedicates his passion for the art of barbering to provide the best services to his clients and to train his students in the latest techniques and methods.",
 
   "booking": "Book Now",
   "SelectLanguage": "Select Language",
@@ -54,7 +54,7 @@
   "ChildrensHaircutsDescription": "Fun and friendly haircuts for kids of all ages.",
 
   "Testimonials": "Customer Reviews",
-  "Testimonial1": "My experience with Raouf Zahidi was exceptional. I got the best haircut of my life! - Former Client",
+  "Testimonial1": "My experience with Raouf Zadi was exceptional. I got the best haircut of my life! - Former Client",
   "Testimonial2": "I learned so much in the barbering classes. Raouf's teaching style makes you feel comfortable and confident. - Student",
 
   "Location": "Location",
@@ -92,7 +92,7 @@
   "sending...": "Sending...",
   "submit": "Submit",
 
-  "footerText": "Raouf Zahidi. All rights reserved.",
+  "footerText": "Raouf Zadi. All rights reserved.",
   "SocialMedia": "Social Media",
   "Facebook": "Facebook",
   "Instagram": "Instagram",
@@ -125,5 +125,9 @@
   "pleaseFillAllFields": "Please fill all fields",
   "appointmentConfirmed": "Your appointment has been confirmed",
   "failedToSendEmail": "Failed to send email",
-  "back": "Back"
+  "back": "Back",
+  "notFound": {
+    "title": "Page Not Found",
+    "message": "Sorry, we couldn't find the page you were looking for."
+  }
 }
