--- a/client/src/languages/ar/Arabic.json
+++ b/client/src/languages/ar/Arabic.json
@@ -11,11 +11,11 @@
   "About": "حول",
   "Booking": "حجز",
   "About Us": "معلومات عنا",
-  "name": "راؤوف زاهدي",
+  "name": "راؤوف زادي",
 
   "about_description": "مع أكثر من 7 سنوات من الخبرة في مجال الحلاقة والتعليم، نحن خيارك المثالي.",
-  "about": "راؤوف زاهدي",
-  "about_description_full": "راؤوف زاهدي هو حلاق محترف ومعلم ذو خبرة تزيد عن 7 سنوات، قام بتدريب أكثر من 12 فردًا في منطقة ميلة، تحديدًا في بلدة تسدان حدادة. يكرس راؤوف شغفه لفن الحلاقة لتقديم أفضل الخدمات لعملائه وتدريب طلابه على أحدث الأساليب والتقنيات.",
+  "about": "راؤوف زادي",
+  "about_description_full": "راؤوف زادي هو حلاق محترف ومعلم ذو خبرة تزيد عن 7 سنوات، قام بتدريب أكثر من 12 فردًا في منطقة ميلة، تحديدًا في بلدة تسدان حدادة. يكرس راؤوف شغفه لفن الحلاقة لتقديم أفضل الخدمات لعملائه وتدريب طلابه على أحدث الأساليب والتقنيات.",
 
   "booking": "احجز الآن",
   "SelectLanguage": "اختر لغة",
@@ -54,7 +54,7 @@
   "ChildrensHaircutsDescription": "قصات شعر ممتعة وودية للأطفال من جميع الأعمار.",
 
   "Testimonials": "آراء العملاء",
-  "Testimonial1": "تجربتي مع راؤوف زاهدي كانت استثنائية. حصلت على أفضل قصة شعر في حياتي! - عميل سابق",
+  "Testimonial1": "تجربتي مع راؤوف زادي كانت استثنائية. حصلت على أفضل قصة شعر في حياتي! - عميل سابق",
   "Testimonial2": "تعلمت الكثير في صفوف الحلاقة. أسلوب راؤوف في التدريس يجعلك تشعر بالراحة والثقة. - طالب",
 
   "Location": "الموقع",
@@ -92,7 +92,7 @@
   "sending...": "جاري الإرسال...",
   "submit": "إرسال",
 
-  "footerText": "راؤوف زاهدي. جميع الحقوق محفوظة.",
+  "footerText": "راؤوف زادي. جميع الحقوق محفوظة.",
   "SocialMedia": "وسائل التواصل الاجتماعي",
   "Facebook": "فيسبوك",
   "Instagram": "إنستغرام",
