--- a/client/src/languages/fr/Franch.json
+++ b/client/src/languages/fr/Franch.json
@@ -11,11 +11,11 @@
   "About": "À propos",
   "Booking": "Réservation",
   "About Us": "À propos de nous",
-  "name": "Raouf Zahdi",
+  "name": "Raouf Zadi",
 
   "about_description": "Avec plus de 7 ans d'expérience dans le domaine de la coiffure et de l'enseignement, nous sommes votre choix idéal.",
-  "about": "Raouf Zahdi",
-  "about_description_full": "Raouf Zahdi est un coiffeur professionnel et enseignant avec plus de 7 ans d'expérience, ayant formé plus de 12 personnes dans la région de Mila, en particulier dans la ville de Tedden. Raouf consacre sa passion pour l'art de la coiffure à offrir les meilleurs services à ses clients et à former ses élèves aux techniques et méthodes les plus récentes.",
+  "about": "Raouf Zadi",
+  "about_description_full": "Raouf Zadi est un coiffeur professionnel et enseignant avec plus de 7 ans d'expérience, ayant formé plus de 12 personnes dans la région de Mila, en particulier dans la ville de Tedden. Raouf consacre sa passion pour l'art de la coiffure à offrir les meilleurs services à ses clients et à former ses élèves aux techniques et méthodes les plus récentes.",
 
   "booking": "Réservez maintenant",
   "SelectLanguage": "Choisissez la langue",
@@ -54,7 +54,7 @@
   "ChildrensHaircutsDescription": "Coupes de cheveux amusantes et conviviales pour les enfants de tous âges.",
 
   "Testimonials": "Témoignages",
-  "Testimonial1": "Mon expérience avec Raouf Zahdi a été exceptionnelle. J'ai eu la meilleure coupe de cheveux de ma vie ! - Ancien client",
+  "Testimonial1": "Mon expérience avec Raouf Zadi a été exceptionnelle. J'ai eu la meilleure coupe de cheveux de ma vie ! - Ancien client",
   "Testimonial2": "J'ai beaucoup appris dans les cours de coiffure. Le style d'enseignement de Raouf vous met à l'aise et vous donne confiance. - Étudiant",
 
   "Location": "Emplacement",
@@ -92,7 +92,7 @@
   "sending...": "Envoi en cours...",
   "submit": "Soumettre",
 
-  "footerText": "Raouf Zahdi. Tous droits réservés.",
+  "footerText": "Raouf Zadi. Tous droits réservés.",
   "SocialMedia": "Médias sociaux",
   "Facebook": "Facebook",
   "Instagram": "Instagram",
